--- a/server/views/index.ejs
+++ b/server/views/index.ejs
@@ -3,7 +3,7 @@
   <head>
   </head>
   <body>
-  	<img src="image <%= new Date() %>">
+  	<img src="image/ <%= new Date() %>">
   </body>
 </html>
 
