--- a/server/views/index.ejs
+++ b/server/views/index.ejs
@@ -3,10 +3,6 @@
   <head>
   </head>
   <body>
-  	<img src="image/ <%= new Date() %>">
+  	<img src="image">
   </body>
 </html>
-
-<script>
-	setTimeout(function(){location.reload();}, 1000);
-</script>
