--- a/server/views/index.ejs
+++ b/server/views/index.ejs
@@ -4,6 +4,9 @@
   </head>
   <body>
   	<img src="image">
-  	<% for (var i = 0; i < data.length; ++i) { %><%= data[i]} %>
+  	<% for (var i = 0; i < data.length; ++i) { %>
+
+  	<%= data[i] %>
+  	<% } %>
   </body>
 </html>
