--- a/server/views/index.ejs
+++ b/server/views/index.ejs
@@ -6,7 +6,7 @@
   	<img src="image">
   	<% for (var i = 0; i < data.length; ++i) { %>
 
-  	<%= data[i] %>
+  	<p><%= i %>:  <%= data[i] %></p>
   	<% } %>
   </body>
 </html>
