--- a/server/views/index.ejs
+++ b/server/views/index.ejs
@@ -51,7 +51,7 @@ $('#container').highcharts({
     }]
 });
 
-var socket = io('http://localhost:3000');
+var socket = io('http://46.101.79.118:3000');
 socket.emit('getData');
 
 socket.on('allData', function (data) {
