--- a/server/views/index.ejs
+++ b/server/views/index.ejs
@@ -4,7 +4,7 @@
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
 	<script src="https://code.highcharts.com/highcharts.js"></script>
 	<script src="https://code.highcharts.com/modules/exporting.js"></script>
-	<script src="http://localhost:3000/static/javascripts/socket.io-1.4.5.js"></script>
+	<script src="46.101.79.118:3000/static/javascripts/socket.io-1.4.5.js"></script>
   </head>
   <body>
 
