--- a/server/views/index.ejs
+++ b/server/views/index.ejs
@@ -61,6 +61,13 @@ socket.emit('getData');
 
 socket.on('allData', function (data) {
 	console.log("GOT DATA:", data);
+
+	for (var i = 0; i < data.length; ++i) {
+		$('#container').highcharts().xAxis[0].series[0].addPoint([i,data[i].temperature])
+	}
+
+
+
 });
 </script>
 
