--- a/server/views/index.ejs
+++ b/server/views/index.ejs
@@ -49,10 +49,10 @@ $('#container').highcharts({
     },
     series: [{
         name: 'Temperature',
-        data: [1,2,3]
+        data: []
     }, {
         name: 'Humidity',
-        data: [4,3,2]
+        data: []
     }]
 });
 
