--- a/server/views/index.ejs
+++ b/server/views/index.ejs
@@ -31,8 +31,7 @@ $('#container').highcharts({
         borderWidth: 0
     },
     series: [{
-        plotLines: [{
-        name: 'Temperature (°C)',
+        name: 'Temperature (C)',
         data: []
     }, {
         name: 'Humidity (%)',
