--- a/server/views/index.ejs
+++ b/server/views/index.ejs
@@ -56,8 +56,8 @@ socket.on('allData', function (data) {
 socket.on('newData', function (data) {
 	console.log("GOT DATA:", data);
 
-	$('#container').highcharts().xAxis[0].series[0].addPoint([i,data[i].temperature]);
-	$('#container').highcharts().xAxis[0].series[1].addPoint([i,data[i].humidity]);
+	$('#container').highcharts().xAxis[0].series[0].addPoint([data[i].temperature]);
+	$('#container').highcharts().xAxis[0].series[1].addPoint([data[i].humidity]);
 });
 </script>
 
