--- a/server/views/index.ejs
+++ b/server/views/index.ejs
@@ -49,8 +49,8 @@ socket.on('allData', function (data) {
 	console.log("GOT DATA:", data);
 
 	for (var i = 0; i < data.length; ++i) {
-		$('#container').highcharts().xAxis[0].series[0].addPoint([dataCount,data[i].temperature], false);
-		$('#container').highcharts().xAxis[0].series[1].addPoint([dataCount,data[i].humidity], false);
+		$('#container').highcharts().xAxis[0].series[0].addPoint([data[i].date, data[i].temperature], false);
+		$('#container').highcharts().xAxis[0].series[1].addPoint([data[i].date, data[i].humidity], false);
 		dataCount++;
 	}
 
@@ -60,8 +60,8 @@ socket.on('allData', function (data) {
 socket.on('newData', function (data) {
 	console.log("GOT DATA:", data);
 
-	$('#container').highcharts().xAxis[0].series[0].addPoint([dataCount, data.temperature], false, true);
-	$('#container').highcharts().xAxis[0].series[1].addPoint([dataCount, data.humidity], false, true);
+	$('#container').highcharts().xAxis[0].series[0].addPoint([data[i].date, data.temperature], false, true);
+	$('#container').highcharts().xAxis[0].series[1].addPoint([data[i].date, data.humidity], false, true);
 	$('#container').highcharts().redraw();
 	dataCount++;
 });
