--- a/server/views/index.ejs
+++ b/server/views/index.ejs
@@ -27,6 +27,9 @@ $('#container').highcharts({
     xAxis: {
 
     },
+    chart: {
+  		zoomType: 'x'
+	}
     legend: {
         layout: 'vertical',
         align: 'right',
