--- a/server/views/index.ejs
+++ b/server/views/index.ejs
@@ -25,7 +25,14 @@ $('#container').highcharts({
         x: -20 //center
     },
     xAxis: {
-
+	    type: 'datetime',
+	    dateTimeLabelFormats: { // don't display the dummy year
+	        month: '%e. %b',
+	        year: '%b'
+	    },
+	    title: {
+	        text: 'Date'
+	    }
     },
     chart: {
   		zoomType: 'x',
