--- a/server/views/index.ejs
+++ b/server/views/index.ejs
@@ -31,6 +31,7 @@ $('#container').highcharts({
 	    }
     },
     chart: {
+        type: 'spline'
   		zoomType: 'x',
         panning: true,
         panKey: 'shift'
