--- a/server/views/index.ejs
+++ b/server/views/index.ejs
@@ -31,7 +31,7 @@ $('#container').highcharts({
 	    }
     },
     chart: {
-        type: 'spline'
+        type: 'spline',
   		zoomType: 'x',
         panning: true,
         panKey: 'shift'
