--- a/server/views/index.ejs
+++ b/server/views/index.ejs
@@ -48,7 +48,14 @@ $('#container').highcharts({
     }, {
         name: 'Humidity (%)',
         data: []
-    }]
+    }],
+    plotOptions: {
+        spline: {
+            marker: {
+                enabled: true
+            }
+        }
+    },
 });
 
 var socket = io('http://46.101.79.118:3000');
@@ -58,8 +65,8 @@ socket.on('allData', function (data) {
 	console.log("GOT DATA:", data);
 
 	for (var i = 0; i < data.length; ++i) {
-		$('#container').highcharts().xAxis[0].series[0].addPoint([Date.UTC(data[i].date), data[i].temperature], false);
-		$('#container').highcharts().xAxis[0].series[1].addPoint([Date.UTC(data[i].date), data[i].humidity], false);
+		$('#container').highcharts().xAxis[0].series[0].addPoint([data[i].date, data[i].temperature], false);
+		$('#container').highcharts().xAxis[0].series[1].addPoint([data[i].date, data[i].humidity], false);
 		dataCount++;
 	}
 
@@ -69,8 +76,8 @@ socket.on('allData', function (data) {
 socket.on('newData', function (data) {
 	console.log("GOT DATA:", data);
 
-	$('#container').highcharts().xAxis[0].series[0].addPoint([Date.UTC(data.date), data.temperature], false);
-	$('#container').highcharts().xAxis[0].series[1].addPoint([Date.UTC(data.date), data.humidity], false);
+	$('#container').highcharts().xAxis[0].series[0].addPoint([data.date, data.temperature], false);
+	$('#container').highcharts().xAxis[0].series[1].addPoint([data.date, data.humidity], false);
 	$('#container').highcharts().redraw();
 	dataCount++;
 });
