--- a/server/views/index.ejs
+++ b/server/views/index.ejs
@@ -49,7 +49,7 @@ $('#container').highcharts({
         name: 'Humidity (%)',
         data: []
     }],
-    
+
 });
 
 var socket = io('http://46.101.79.118:3000');
@@ -57,6 +57,7 @@ socket.emit('getData');
 
 socket.on('allData', function (data) {
 	console.log("GOT DATA:", data);
+	$('#container').highcharts().showLoading("Wait a second");
 
 	for (var i = 0; i < data.length; ++i) {
 		$('#container').highcharts().xAxis[0].series[0].addPoint([data[i].date, data[i].temperature], false);
@@ -65,13 +66,14 @@ socket.on('allData', function (data) {
 	}
 
 	$('#container').highcharts().redraw();
+	$('#container').highcharts().hideLoading();
 });
 
 socket.on('newData', function (data) {
 	console.log("GOT DATA:", data);
 
-	$('#container').highcharts().xAxis[0].series[0].addPoint([data.date, data.temperature], false);
-	$('#container').highcharts().xAxis[0].series[1].addPoint([data.date, data.humidity], false);
+	$('#container').highcharts().xAxis[0].series[0].addPoint([data.date, data.temperature], false, true);
+	$('#container').highcharts().xAxis[0].series[1].addPoint([data.date, data.humidity], false, true);
 	$('#container').highcharts().redraw();
 	dataCount++;
 });
