--- a/server/views/index.ejs
+++ b/server/views/index.ejs
@@ -55,11 +55,14 @@ socket.emit('getData');
 $('#container').highcharts().showLoading("Wait a second");
 
 socket.on('allData', function (data) {
-	console.log("GOT DATA:", data);
 
 	for (var i = 0; i < data.length; ++i) {
-		$('#container').highcharts().xAxis[0].series[0].addPoint([data[i].date, data[i].temperature], false);
-		$('#container').highcharts().xAxis[0].series[1].addPoint([data[i].date, data[i].humidity], false);
+		var date = data[i].date;
+		console.log(typeof date, date);
+		var humidity = data[i].humidity;
+		var temperature = data[i].temperature;
+		$('#container').highcharts().xAxis[0].series[0].addPoint([date,temperature], false);
+		$('#container').highcharts().xAxis[0].series[1].addPoint([date,humidity], false);
 		dataCount++;
 	}
 
@@ -68,10 +71,11 @@ socket.on('allData', function (data) {
 });
 
 socket.on('newData', function (data) {
-	console.log("GOT DATA:", data);
-
-	$('#container').highcharts().xAxis[0].series[0].addPoint([data.date, data.temperature], false);
-	$('#container').highcharts().xAxis[0].series[1].addPoint([data.date, data.humidity], false);
+	var date = data.date;
+	var humidity = data.humidity;
+	var temperature = data.temperature;
+	$('#container').highcharts().xAxis[0].series[0].addPoint([date, temperature], false);
+	$('#container').highcharts().xAxis[0].series[1].addPoint([date, humidity], false);
 	$('#container').highcharts().redraw();
 	dataCount++;
 });
