--- a/server/views/index.ejs
+++ b/server/views/index.ejs
@@ -17,12 +17,11 @@
 
 <script>
 
-var dataCount = 0;
 
 $('#container').highcharts({
     title: {
-        text: 'Huoneen lämpötila ja ilmankosteus',
-        x: -20 //center
+        text: 'Room temperature & humidity',
+        x: -20
     },
     xAxis: {
         type: 'datetime'
@@ -58,12 +57,10 @@ socket.on('allData', function (data) {
 
 	for (var i = 0; i < data.length; ++i) {
 		var date = new Date(data[i].date).getTime();
-		console.log(typeof date, date);
 		var humidity = data[i].humidity;
 		var temperature = data[i].temperature;
 		$('#container').highcharts().xAxis[0].series[0].addPoint([date,temperature], false);
 		$('#container').highcharts().xAxis[0].series[1].addPoint([date,humidity], false);
-		dataCount++;
 	}
 
 	$('#container').highcharts().redraw();
