--- a/server/views/index.ejs
+++ b/server/views/index.ejs
@@ -56,7 +56,7 @@ $('#container').highcharts().showLoading("Wait a second");
 console.log("Chart ready");
 
 socket.on('allData', function (data) {
-console.log("allData");
+console.log("allData", JSON.stringify(data, false, 4));
 
 	for (var i = 0; i < data.length; ++i) {
 		var date = new Date(data[i].date).getTime();
