--- a/server/views/index.ejs
+++ b/server/views/index.ejs
@@ -62,6 +62,9 @@ console.log("allData", JSON.stringify(data, false, 4));
 		var date = new Date(data[i].date).getTime();
 		var humidity = data[i].humidity;
 		var temperature = data[i].temperature;
+
+		console.log("Add date: ", date, ", humidity: ", humidity, " temperature: ", temperature);
+
 		$('#container').highcharts().xAxis[0].series[0].addPoint([date,temperature], false);
 		$('#container').highcharts().xAxis[0].series[1].addPoint([date,humidity], false);
 	}
@@ -75,6 +78,7 @@ socket.on('newData', function (data) {
 	var date = new Date(data.date).getTime();
 	var humidity = data.humidity;
 	var temperature = data.temperature;
+	console.log("Add date: ", date, ", humidity: ", humidity, " temperature: ", temperature);
 	$('#container').highcharts().xAxis[0].series[0].addPoint([date, temperature], false);
 	$('#container').highcharts().xAxis[0].series[1].addPoint([date, humidity], false);
 	$('#container').highcharts().redraw();
