--- a/server/views/index.ejs
+++ b/server/views/index.ejs
@@ -41,10 +41,10 @@ $('#container').highcharts({
     },
     series: [{
         name: 'Temperature (C)',
-        data: []
+        data: [1,2,3]
     }, {
         name: 'Humidity (%)',
-        data: []
+        data: [4,5,6]
     }],
 
 });
