--- a/server/views/index.ejs
+++ b/server/views/index.ejs
@@ -56,7 +56,7 @@ $('#container').highcharts().showLoading("Wait a second");
 socket.on('allData', function (data) {
 
 	for (var i = 0; i < data.length; ++i) {
-		var date = new data[i].date;
+		var date = data[i].date;
 		var humidity = data[i].humidity;
 		var temperature = data[i].temperature;
 		$('#container').highcharts().xAxis[0].series[0].addPoint([date,temperature], false);
