--- a/server/views/index.ejs
+++ b/server/views/index.ejs
@@ -40,10 +40,10 @@ $('#container').highcharts({
     },
     series: [{
         name: 'Temperature (C)',
-        data: [1,2,3]
+        data: []
     }, {
         name: 'Humidity (%)',
-        data: [4,5,6]
+        data: []
     }],
 
 });
