--- a/server/views/index.ejs
+++ b/server/views/index.ejs
@@ -20,7 +20,7 @@
 
 $('#container').highcharts({
     title: {
-        text: 'Huoneen lämpötila ja ilmankosteus',
+        text: 'Room temperature & humidity',
         x: -20 //center
     },
     xAxis: {
