--- a/server/views/index.ejs
+++ b/server/views/index.ejs
@@ -71,7 +71,7 @@ $('#pirGraph').highcharts({
         type: 'datetime'
     },
     chart: {
-        type: 'spline',
+        type: 'column',
   		zoomType: 'x',
         panning: true,
         panKey: 'shift'
