--- a/server/views/index.ejs
+++ b/server/views/index.ejs
@@ -71,7 +71,7 @@ $('#pirGraph').highcharts({
         type: 'datetime'
     },
     chart: {
-        type: 'column',
+        type: 'area',
   		zoomType: 'x',
         panning: true,
         panKey: 'shift'
@@ -85,11 +85,7 @@ $('#pirGraph').highcharts({
         name: 'Motion',
         data: []
     }],
-    plotOptions: {
-        series: {
-            pointPadding: -0.3
-        }
-    },    
+   
 });
 
 var timeZoneOffset = new Date().getTimezoneOffset();
